stationery-backend/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stationery-backend
  labels:
    name: stationery-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: stationery-backend
  template:
    metadata:
      name: stationery-backend
      labels:
        name: stationery-backend
    spec:
      containers:
        - name: stationery-backend
          image: enricoadi/stationery-backend:1
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: stationery-backend-service
spec:
  selector:
    name: stationery-backend
  ports:
    - port: 3000
      targetPort: 3000
