stationery-backend/kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stationery-backend-ingress
  labels:
    name: stationery-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: stationery-backend.enrico.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stationery-backend-service
                port:
                  number: 3000
